# ai-toolkit-demos

./: .env.example  .gitignore  AGENTS.md  README.md  biome.json  extract-tools.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.turbo/preferences/: tui.json
.zed/: settings.json
backend/: README.md  ai_helper.py  ai_integration.py  ai_service.py  main.py  pyproject.toml  rate_limit.py  requirements.txt  test.ipynb  test.py  test_gpt5_format.py
src/app/: globals.css  page.tsx
src/app/ai-agent-chatbot/: page.tsx
src/app/ai-agent-chatbot-custom/: page.tsx
src/app/comments/: page.tsx
src/app/comments-workflow/: comments-workflow.css  page.tsx
src/app/inline-edits/: AiCursorDecoration.ts  editor.tsx  page.tsx
src/app/insert-content-workflow/: page.tsx  selection.css
src/app/insert-content-workflow-preview/: page.tsx
src/app/insert-content-workflow-review/: page.tsx
src/app/insert-content-workflow-tracked-changes/: page.tsx
src/app/justified-changes/: page.tsx  suggestions.css
src/app/multi-document/: page.tsx
src/app/preview-changes/: page.tsx
src/app/preview-changes-streaming/: page.tsx
src/app/proofreader/: page.tsx
src/components/: chat-message.tsx  chat-sidebar.tsx  suggestion-review-tooltip.tsx  toolbar-panel.tsx
src/lib/: rate-limit.ts  use-stream-tool-editor.ts  use-suggestion-review.ts
src/styles/: split-view.css  suggestions-preview-mode.css  suggestions-review-mode.css  tiptap-content.css  tracked-changes.css
src/types/: global.d.ts
types/: global.d.ts
(+128 files in other folders)
